2010-11-14  Giuseppe Caizzone <acaizzo@gmail.com>

	Support reading files larger than 2 GiB.

	* grub-core/fs/udf.c (grub_udf_iterate_dir): Change type of variable
	"offset" to grub_off_t.
	(grub_udf_read_file): Likewise for parameter "pos".

2010-11-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (Changes from GRUB Legacy): Note when save_env is
	unavailable.
	(Simple configuration): Refer to Changes from GRUB Legacy about
	save_env availability.

2010-11-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Ignore empty partition table detection
	instead of trying to include part_ module.

2010-11-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/lvm.c (GRUB_MOD_FINI): Reset the vg_list. Fixes
	LVM on RAID support.

2010-11-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Properly define WORDS_BIGENDIAN in wrapped environments.

	* grub-core/lib/libgcrypt_wrap/cipher_wrap.h (WORDS_BIGENDIAN): New
	definition.
	* grub-core/lib/posix_wrap/sys/types.h (WORDS_BIGENDIAN): Likewise.

	Reported by: Manoel Rebelo Abranches.
	Tested by: Manoel Rebelo Abranches.

2010-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkconfig.in: Fix quoting.

2010-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Support big ext2 files.

	* grub-core/fs/ext2.c (grub_ext2_inode): Rename dir_acl to size_high.
	(grub_ext2_read_block): Support triple indirect blocks.
	(grub_ext2_read_file): Use 64-bit types and read size_high.
	(grub_ext2_open): Read size_high.
	Reported by: Ximin Luo.
	Tested by: Manoel Rebelo Abranches.

2010-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Handle filenames containing spaces.
	Reported by: Jordan Uggla.
	Tested by: Jordan Uggla.

2010-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkconfig.in (grub_script_check): New variable.
	Use grub_script_check instead of grub-script-check.
	Reported by: Barry Jackson.

2010-11-13  Vladimir Serbinenko  <phcoder@gmail.com>
